--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   pool: 5
   host: localhost
   username: postgres
-  password: 12345678
+  password: 1234
 
 test:
   adapter: postgresql
@@ -14,4 +14,4 @@ test:
   pool: 5
   host: localhost
   username: postgres
-  password: 12345678
+  password: 1234
